fixed alignment of remember me chackbox

--- a/project/static/base.css
+++ b/project/static/base.css
@@ -44,7 +44,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-size: cover;
-    display: fixed;
+    /* display: */
     width: 100%;
     /* Full width (cover the whole page) */
     height: 100%;
